--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,8 +25,20 @@ jobs:
         with:
           mdbook-version: 'latest'
 
+      - name: Install Pandoc
+        uses: pandoc/actions/setup@v1
+
+      - name: Install Typst
+        uses: typst-community/setup-typst@v4
+
+      - name: Build PDF
+        run: ./build.sh pdf
+
       - name: Build HTML
         run: mdbook build
+
+      - name: Copy PDF into site
+        run: cp output/poh.pdf output/html/poh.pdf
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
